    ADDED: TerminalEmulator: Ctrl+F switches between full-widget TE, normal TE
           (thanks to Vaclav Juza)
    ADDED: Ctrl+Up from panel focuses the origin editbox, Ctrl+Down from origin
           editbox focuses the panel (thanks to Vaclav Juza)
    ADDED: TerminalEmulator: Ctrl+Shift+Up/Down always focus/unfocus TE
           independently whether the command line is shown or not
    ADDED: TerminalEmulator: if the command line is hidden,
           TE receives Ctrl+Up / Ctrl+Down (thanks to Vaclav Juza)
    ADDED: Pimped KDE's KeyDialog in order to provide import/export abilities
    ADDED: UserAction: Outputcollectionwindow can now save the buffer
    ADDED: UserAction: Outputcollection now supports fonts with fixed or
           variable width
    ADDED: synchronizer: double click on a file calls the diff utility (kompare)
    ADDED: terminal emulator: Ctrl+Enter,Ctrl+Shift+Enter paste the filename
    ADDED: atomic extensions (see CVSNEWS)
    ADDED: archive packing / unpacking are now in the background
    ADDED: renaming of just the filename, without extension
    ADDED: full screen terminal window (mc-style)
    ADDED: Inactive panel color dimming (thanks to Heiner)
    ADDED: ActionMan for useraction configuration
    ADDED: single instance mode
    ADDED: start to system tray
    ADDED: right click menu for bookmarks
    ADDED: enable/disable special bookmarks by right clicking on them
    ADDED: keeping the directory structures for virt folders at copy/move
    ADDED: synchronizer, parallel threads for slow FTP servers
    ADDED: an option for directories to be always sorted by name
    ADDED: packing with encryption, multiple volume archives, compress level
    ADDED: krarc, 7z, 7za handling
    ADDED: media button
    ADDED: swap panels / swap sides
    ADDED: synchronizer, threshold for equality, time offset between sides
    ADDED: synchronizer, faster "compare by content" for local files
    ADDED: synchronizer, Feed to listbox