@@ -1,3 +1,5 @@
+    FIXED: When a refresh fails, the attempted URL is kept in the origin bar, and
+           focus remains there for the user to fix. Idea by Vaclav Juza
     ADDED: TerminalEmulator: Ctrl+F switches between full-widget TE, normal TE
            (thanks to Vaclav Juza)
     ADDED: Ctrl+Up from panel focuses the origin editbox, Ctrl+Down from origin
